# gups-shmem

./: Makefile.am  configure.ac
src/: RandomAccess.c  RandomAccess.h  driver.c  starts.c
